<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/plomo_claro"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:id="@+id/ly_negativa"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/negro"
        android:padding="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/titulo_action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@color/blanco" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btn_volver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/abc_ic_ab_back_mtrl_am_alpha" />

        </LinearLayout>

    </LinearLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:id="@+id/ly_login">

            <TextView
                android:id="@+id/lbl_titulo_banco_muestras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/banco_de_muestras"
                android:layout_marginTop="10dp"
                android:background="@color/celeste_lafar"
                android:textColor="@color/blanco"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />



            <Button
                android:layout_width="match_parent"
                android:hint="@string/escribir_nombre_doctor"
                android:layout_height="wrap_content"
                android:id="@+id/btn_nombre_medico" />



            <Button
                android:layout_width="match_parent"
                android:hint="@string/escribir_apm"
                android:layout_height="wrap_content"
                android:id="@+id/btn_nombre_apm"/>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ly_botones_muestra_medica">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agregar"
                android:layout_weight="1"
                android:id="@+id/btn_agregar" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quitar"
                android:layout_weight="1"
                android:id="@+id/btn_quitar" />
            </LinearLayout>

            <TableLayout
                android:id="@+id/tly_detalle_banco_de_muestras"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_marginBottom="8dp"
                android:shrinkColumns="*"
                android:stretchColumns="*" >


            </TableLayout>




        </LinearLayout>


        </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/plomo_mas_oscuro"
        android:padding="10dp"
        android:orientation="horizontal" >




        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtro_por_fecha"
            android:visibility="gone"
            android:layout_weight="1"
            android:background="@drawable/boton_custom"
            android:textColor="@color/blanco"
            android:id="@+id/btn_filtro_fecha"
            android:layout_gravity="center_vertical" />






        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_custom"
            android:textColor="@color/blanco"
            android:text="@string/ver_banco_muestras_realizadas"
            android:id="@+id/btn_ver_realizadas"
            android:layout_gravity="center_vertical"  />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_custom"
            android:textColor="@color/blanco"
            android:text="@string/sincronizar_banco_muestras"
            android:id="@+id/btn_sincronizar_banco_muestras"
            android:layout_gravity="center_vertical" />

    </LinearLayout>


</LinearLayout>