<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/plomo_claro"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:descendantFocusability="beforeDescendants"
    android:id="@+id/ly_login1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/negro"
        android:padding="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/titulo_action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@color/blanco" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:orientation="horizontal" >




            <ImageView
                android:id="@+id/btn_cobertura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/reporte_de_cobertura"
                android:background="@drawable/abc_ic_menu_paste_mtrl_am_alpha" />


                <ImageView
                    android:id="@+id/btn_volver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/abc_ic_ab_back_mtrl_am_alpha" />

</LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:id="@+id/ly_titulo_mapa">

        <TextView
            android:id="@+id/lb_ltitulo_tareas_realizadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_tareas_realizadas"
            android:layout_marginTop="10dp"
            android:background="@color/celeste_lafar"
            android:textColor="@color/blanco"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/ly_listado">

        <EditText
            android:id="@+id/txt_buscador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/buscador"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/blanco"
            android:ems="10" >
        </EditText>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lv_realizadas" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/plomo_mas_oscuro"
        android:padding="10dp"
        android:orientation="horizontal" >




        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtro_por_fecha"
            android:layout_weight="1"
            android:background="@drawable/boton_custom"
            android:textColor="@color/blanco"
            android:id="@+id/btn_filtro_fecha"
            android:layout_gravity="center_vertical" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_custom"
            android:textColor="@color/blanco"
            android:text="@string/filtro_positivas"
            android:id="@+id/btn_filtro_estado"
            android:layout_gravity="center_vertical"  />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_custom"
            android:textColor="@color/blanco"
            android:text="@string/filtro_sincronizadas"
            android:id="@+id/btn_filtro_sincronizadas"
            android:layout_gravity="center_vertical"  />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_custom"
            android:textColor="@color/blanco"
            android:text="@string/filtro_todas"
            android:id="@+id/btn_filtro_todas"
            android:layout_gravity="center_vertical"  />

    </LinearLayout>

</LinearLayout>


